Renamed Testimony section to about. Renamed SCSS files for Testimony to about. Fixed about section not being a single coloumn in views lower then medium Fixed Header not being center aligns in lower sized views

--- a/css/scss/base/_root.scss
+++ b/css/scss/base/_root.scss
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+    min-width: 320px;
     letter-spacing: .4px;
     margin: 0;
     padding: 0;
