--- a/css/scss/modules/_hero.scss
+++ b/css/scss/modules/_hero.scss
@@ -43,6 +43,7 @@
     h2,
     p,
     a {
+        text-align: center;
         margin: 1rem 0;
         color: color.$text--light;
     }
